--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ uvicorn>=0.32.0
 sqlmodel>=0.0.22
 asyncpg>=0.30.0
 sqlalchemy[asyncio]>=2.0.0
+pgvector>=0.2.0
 
 # Configuration
 pydantic-settings>=2.6.0
