--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ pgvector>=0.2.0
 # Configuration
 pydantic-settings>=2.6.0
 python-dotenv>=1.0.1
+email-validator>=2.0.0
 
 # Logging
 loguru>=0.7.3
